--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jogo da Velha - Agente Inteligente</title>
+
+    <script src="./tau-prolog.js"></script>
   </head>
   <body>
     <div id="root"></div>
