--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jogo da Velha - Agente Inteligente</title>
 
-    <script src="./tau-prolog.js"></script>
+    <script src="tau-prolog.js"></script>
   </head>
   <body>
     <div id="root"></div>
